--- a/css/main.css
+++ b/css/main.css
@@ -70,9 +70,7 @@ html {
 /*--------------------------------------------------------------
     4.0 - ELEMENTS
 -------------------------------------------------------------- */
-
-
-/* ----- TYPOGRAPHY ----- */ 
+/* ----- NAV ----- */ 
 nav {
         text-align: center;
 }
@@ -80,9 +78,17 @@ ul {
         list-style: none;
         padding: 0;
 }
+footer ul {
+        margin-top: 2em;
+}
 li {
         padding: 5px;
         display: inline-block;
+}
+footer li {
+        display: block;
+        margin-top: 1em;
+
 }
 li:hover {
         background-color: #FFD8DB;
@@ -95,13 +101,15 @@ a {
 a:hover {
         color: #00515D;
 }
+/* ----- TYPOGRAPHY ----- */ 
+
 h1 {
         font-size: 3rem;
         font-family: 'Pacifico';
         color: #00B0A3;
 }
 h2 {
-        font-size: 1.5rem;
+        font-size: 2rem;
         font-family: 'Pacifico';
         color: #00B0A3;
 }
@@ -109,6 +117,7 @@ h3 {
         font-size: 1rem;
         font-family: 'Roboto Slab', serif;
         color: #00B0A3;
+        margin-bottom: 0;
 }
 h4 {
         font-size: .8rem;
@@ -117,6 +126,13 @@ h4 {
 }
 p {
         line-height: 1.8em;
+        margin: 0em;
+}
+p+p {
+        margin-top: 2em;
+}
+footer {
+        border-top: 5px solid #FFD8DB;
 }
 
 
@@ -150,12 +166,7 @@ p {
 [class*="col-"] {
         padding: .5em .5em ;
 }
-#pos-fixed {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: #FFF;
-}
+
 
 .col-sm-1 {
         width: calc(100% * 1 /12);
@@ -296,20 +307,52 @@ p {
 
 
 /* ----- CONTENT ----- */
-
+#pos-fixed {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: #FFF;
+        margin-bottom: 1px;
+        border-bottom: 5px solid #FFD8DB;
+}
 #pos-fixed + div {
         background-color: #FFD8DB;
 
 }
 #bg-image {
         text-align: center;
-        padding: 2em 0em;
-        margin-top: 6em;
+        padding: 2em;
+        margin-top: 10em;
+}
+#systems .row:last-child section {
+        align-content: flex-start;
+}
+#layout > section:first-child {
+        flex-direction: column;
+        justify-content: center;
+        background-color: #FFD8DB;
+        text-align: center;
+}
+#testing .col-lg-12:first-child {
+        display: none;
+}
+#benefits {
+        text-align: center;
 }
 
 
 @media screen and (min-width:768px) {
-
+        #bg-image {
+                text-align: center;
+                padding: 2em 0em;
+                margin-top: 6em;
+        }
+        #systems{
+                text-align: center;
+        }
+        #testing .col-lg-12:first-child {
+                display: block;
+        }
 }
 
 @media screen and (min-width:1024px){
