--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ nav {
 ul {
         list-style: none;
         padding: 0;
-        margin-top: 0;
+        margin: 0;
 }
 footer ul {
         margin-top: 2em;
@@ -93,17 +93,14 @@ footer li {
         margin-top: 1em;
 
 }
-header li:hover {
-        background-color: #FFD8DB;
-        border-radius: 20px;
-        
-}
-footer a:hover {
-        padding: 3px;
+
+ a:hover {
+        padding: 5px;
         background-color: #FFD8DB;
         border-radius: 20px;
 }
 a {
+        padding: 5px;
         color: #00B0A3;
         text-decoration: none;
 }
@@ -129,7 +126,7 @@ h2 {
         font-size: 2rem;
         font-family: 'Pacifico';
         color: #00B0A3;
-        margin: 0;
+        margin: 0 0 .5em 0;
         font-weight: lighter;
 }
 h3 {
@@ -139,7 +136,7 @@ h3 {
         margin: 0 0 0.2em 0;
 }
 h4 {
-        font-size: .8rem;
+        /* font-size: .8rem; */
         font-family: 'Open Sans', sans-serif;
         color: #00515D;
         margin: 0;
@@ -151,24 +148,36 @@ p {
 p+p {
         margin-top: 2em;
 }
-footer {
-        border-top: 5px solid #FFD8DB;
-}
-footer .col-sm-4, footer .col-sm-8 {
-        margin: 0 auto;
-}
 
 
 @media screen and (min-width:768px) {
         nav{
-                text-align: left;
+                text-align: right;
+        }
+        footer nav,
+        footer h4,
+        footer p {
+                text-align: center;
         }
        
         
 }
 
 @media screen and (min-width:1024px){
-      
+        h1 {
+                font-size: 5em;
+        }
+        h1 + div p {
+                font-size: 1.2em;
+        }
+        footer nav,
+        footer h4,
+        footer p {
+                text-align: left;
+        }
+        footer li {
+                padding: none;
+        }
 }
 /*--------------------------------------------------------------
     5.0 - OBJECTS
@@ -345,7 +354,7 @@ footer .col-sm-4, footer .col-sm-8 {
 #systems .col-md-8 {
         margin-bottom: 1em;
 }
-/* ----- Pos-fixed ----- */
+/* ----- header-hero ----- */
 #pos-fixed {
         position: fixed;
         top: 0;
@@ -353,18 +362,19 @@ footer .col-sm-4, footer .col-sm-8 {
         background-color: #FFF;
         margin-bottom: 1px;
         border-bottom: 5px solid #FFD8DB;
+        width: 100%;
 }
 #pos-fixed + div {
         background-color: #FFD8DB;
 
 }
-#pos-fixed .wrapper {
+#pos-fixed .row {
         text-align: center;
 }
 #bg-image p {
         padding-bottom: 6em;
+        /* font-size: 1.2em; */
 }
-/* ----- Bg-image ----- */
 #bg-image {
         text-align: center;
         margin-top: 9em;
@@ -384,15 +394,21 @@ footer .col-sm-4, footer .col-sm-8 {
 #layout .row:last-child section {
         margin-top: 2em;
 }
- h2 {
-        margin-bottom: .5em;
-}
+
 /* ----- Testing ----- */
 #testing {
         margin-bottom: 4em;
 }
 #testing .col-lg-12:first-child {
         display: none;
+}
+#testing .bg-image {
+        background: url(../img/rainbows@2x.jpg)  no-repeat center;
+        -o-background-siz: contain;
+        -ms-background-siz: contain;
+        -webkit-background-siz: contain;
+        -moz-background-siz: contain;
+        background-size: contain;
 }
 /* ----- Benenfits ----- */
 #benefits {
@@ -405,6 +421,15 @@ footer .col-sm-4, footer .col-sm-8 {
         padding: 0px;
         font-size: xx-large;
 }
+
+        /* FOOTER */
+footer {
+        border-top: 5px solid #FFD8DB;
+}
+footer .col-sm-4, footer .col-sm-8 {
+        margin: 0 auto;
+}
+        
 
 
 @media screen and (min-width:768px) {
@@ -423,10 +448,16 @@ footer .col-sm-4, footer .col-sm-8 {
         #benefits h3 {
                 margin: 0px;
         }
+        #bg-image {
+                margin-top: 5em;
+        }
 
 }
 
 @media screen and (min-width:1024px){
+        #pos-fixed > .row:first-child {
+                align-items: center;
+        }
         #layout > section:first-child {
                 order: 1;
         }
